--- a/Frontend/wwwroot/index.html
+++ b/Frontend/wwwroot/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>BlazorWasmSample</title>
+    <title>凯瑟琳</title>
     <base href="/" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="Frontend.styles.css" rel="stylesheet" />
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div style="position:absolute; top:30vh; width:100%; text-align:center">
+            <h1>凯瑟琳</h1>
+            <div style="display:flex; gap:10px; justify-content:center; align-items:center">
+                提瓦特有着他自己的法则。。。
+            </div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
